WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132682
[iOS WebKit2] Can't activate text fields on Facebook
https://bugs.webkit.org/show_bug.cgi?id=132682
Summary
[iOS WebKit2] Can't activate text fields on Facebook
Antti Koivisto
Reported
2014-05-08 07:55:25 PDT
Content change observer fails to complete
Attachments
patch
(8.79 KB, patch)
2014-05-08 08:14 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch 2
(6.93 KB, patch)
2014-05-08 09:10 PDT
,
Antti Koivisto
enrica
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-05-08 07:55:58 PDT
<
rdar://problem/16315823
>
Antti Koivisto
Comment 2
2014-05-08 08:14:57 PDT
Created
attachment 231067
[details]
patch
Antti Koivisto
Comment 3
2014-05-08 09:10:17 PDT
Created
attachment 231072
[details]
patch 2 The same patch without changing CheckForVisibilityChangeOnRecalcStyle to match the old behavior. This is not needed to fix Facebook and the new behavior is arguably more sensible than the old one.
Antti Koivisto
Comment 4
2014-05-08 09:11:03 PDT
If it is needed it is better done separately.
Enrica Casucci
Comment 5
2014-05-08 09:23:10 PDT
Comment on
attachment 231072
[details]
patch 2 Looks good!
Antti Koivisto
Comment 6
2014-05-08 09:43:31 PDT
https://trac.webkit.org/r168473
Benjamin Poulain
Comment 7
2014-05-08 14:53:42 PDT
Comment on
attachment 231072
[details]
patch 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=231072&action=review
> Source/WebKit2/WebProcess/WebPage/WebPage.h:1199 > + RefPtr<WebCore::Node> m_pendingSyntheticClickNode; > + WebCore::FloatPoint m_pendingSyntheticClickLocation;
You should put those next to m_potentialTapNode && m_potentialTapLocation
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug