[iOS WebKit2] Can't activate text fields on Facebook https://bugs.webkit.org/show_bug.cgi?id=132682

Reviewed by Enrica Casucci.


Source/WebCore:
* page/DOMTimer.cpp:
(WebCore::DOMTimer::fired):

    The isDocument() test here had reversed in the merge breaking content change observer callback.

Source/WebKit2:
* WebProcess/WebCoreSupport/ios/WebChromeClientIOS.mm:
(WebKit::WebChromeClient::observedContentChange):

    Implement content change observer callback.

* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::handleSyntheticClick):

    If the event gets canceled by a potential change (a started short-duration timer)
    save the position and node so we can continue later.

(WebKit::WebPage::completePendingSyntheticClickForContentChangeObserver):

    If it turns out the observed timer changed nothing continue the click event.

(WebKit::WebPage::completeSyntheticClick):

    Factored click event dispatch part of handleSyntheticClick here.



Canonical link: https://commits.webkit.org/150735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168473 268f45cc-cd09-0410-ab3c-d52691b4dbfc